Update shelf visibility in ~TabletModeWindowDragDelegate.

Added UpdateShelfVisibility in ~TabletModeWindowDragDelegate to keep
shelf in correct state after drag a window from top.
Most of the cases shelf can achieve a correct state after drag except for
dragging a browser window from top. The problem is that we delete drag
details in EndingForDraggingWindow for app windows but we can't do the
same for browser window.
Then ShelfLayoutManager::IsDraggingWindowFromTopOrCaptionArea
will drop into wrong condition in this case, which will cause the shelf
into a wrong state at the end of drag.

Tried to UpdateShelfVisibility again in ~TabletModeWindowDragDelegate
when drag details has already been deleted for all the window drags.

Bug: 882962
Change-Id: I6915bcfd7ee1890d40ca5d422c913552a487daf1
Reviewed-on: https://chromium-review.googlesource.com/1219934
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Min Chen <minch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590529}
Former-commit-id: e63f179c52700df6ce42e2c381d471864d95ff06